public/styles/theme.css
@import url("https://fonts.googleapis.com/css2?family=Geist:wght@100..900&display=swap");

:root {
  --grey-border-primary: 1px solid rgb(53, 53, 53);
  --input-bg-primary: rgb(22, 22, 22);
  --h1-font-size-primary: clamp(3.5rem, 3.5vw, 5rem);
  --gradient-primary: linear-gradient(
    90deg,
    rgb(209, 153, 48),
    rgb(223, 16, 16),
    rgb(148, 64, 228)
  );
  --shadow-primary: 0 4px 8px rgba(0, 0, 0, 0.5), 0 0 8px rgba(255, 255, 255, 0.05);
  --bg-grey: #0f0f0f;
  --bg-black: #070707;
  --bg-primary: fixed linear-gradient(transparent, var(--bg-black) 50%),
    fixed repeating-linear-gradient(#2b2b2b, #2b2b2b 1px, transparent 1px, transparent 100px),
    fixed
      repeating-linear-gradient(to right, #2b2b2b, #2b2b2b 1px, transparent 1px, transparent 100px)
      var(--bg-black);
  --grey: rgb(31, 31, 31);
  --text-grey: rgb(165, 165, 165);
}

* {
  box-sizing: border-box;
}

#header {
  z-index: -1;
  height: calc(100% - 137px);
  position: absolute;
  top: 0;
  width: 100%;
}

body {
  background-color: var(--bg-grey);
  font-family: "Geist", sans-serif;
  margin: 0;

  h1 {
    background: var(--gradient-primary);
    background-clip: text;
    color: transparent;
  }
}

.heading {
  font-size: 3rem;
  margin: 110px 0 30px 0;
}

#container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  min-height: 100dvh;
}

main {
  display: flex;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  flex: 1;
  width: 100%;
  padding-inline: 10%;
}

footer {
  border-top: 1px solid #1f1f1f;

  ul {
    list-style: none;
    color: rgb(146, 146, 146);
  }
}

form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 5px;

  .form-control {
    border: var(--grey-border-primary);
    padding: 15px 25px 15px 25px;
    width: 300px;
    border-radius: 10px;
    background-color: var(--input-bg-primary);
    color: white;
  }
  .form-control:focus {
    box-shadow: none;
    color: white;
    border: 1px solid transparent;
    border-radius: 10px;
    background: linear-gradient(var(--input-bg-primary), var(--input-bg-primary)) padding-box,
      var(--gradient-primary) border-box;
    background-origin: padding-box, border-box;
    background-clip: padding-box, border-box;
  }
  input::placeholder {
    color: rgb(151, 151, 151);
  }
}

#form-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: rgb(31, 31, 31);
  padding: 65px;
  border-radius: 20px;
  box-shadow: var(--shadow-primary);
  border: var(--grey-border-primary);
}

.btn {
  border: var(--grey-border-primary);
  border-radius: 10px;
  transition: all 0.2s ease-in;
  padding: 7px 12px;
}
.btn:hover {
  border: var(--grey-border-primary);
}
.btn-primary {
  background-color: var(--input-bg-primary);
}
.btn-primary:hover {
  background-color: rgb(41, 41, 41);
}
.btn-secondary {
  background-color: white;
  color: black;
}
.btn-secondary:hover {
  background-color: rgb(177, 177, 177);
  color: black;
}

nav {
  position: sticky;
  top: 0;
}
#nav-container {
  backdrop-filter: blur(20px);
  background-color: rgba(0, 0, 0, 0.4);
  box-shadow: var(--shadow-primary);
  gap: clamp(15px, 2.5vw, 35px);

  #open-offcanvas-nav {
    cursor: pointer;
    stroke: var(--text-grey);
    transition: all 0.2s ease-in;
  }
  #open-offcanvas-nav:hover {
    stroke: white;
  }

  .navbar-brand {
    letter-spacing: 5px;
  }

  .navbar-nav {
    gap: clamp(0, 0.5vw, 100px);

    li:last-child {
      margin-left: clamp(15px, 2.5vw, 35px);
    }
  }

  .nav-item {
    align-content: center;
  }
  .nav-link {
    color: var(--text-grey);
    background-color: transparent;
    padding: 5px 12px;
  }
  .nav-link:hover {
    color: white;
    background-color: rgb(22, 22, 22);
  }
}

.fs-1 {
  font-size: 3.5rem !important;
}

#offcanvas-nav {
  height: 100dvh;
  width: 100vw;
  background-color: var(--bg-grey);
  z-index: 9999;
  top: 0;
  right: -100vw;
  transition: all 0.2s;
  transition-behavior: allow-discrete;

  #close-offcanvas-nav {
    cursor: pointer;
    stroke: var(--text-grey);
    transition: all 0.2s ease-in;
  }
  #close-offcanvas-nav:hover {
    stroke: white;
  }

  h1 {
    font-size: 3rem;
    letter-spacing: 10px;
  }

  ul {
    list-style: none;
    color: var(--text-grey);

    li:not(:last-child) {
      font-size: 1.9rem;
      letter-spacing: 5px;
      width: max-content;

      :hover {
        color: white;
      }
    }
  }
}
#offcanvas-nav.open {
  display: block !important;
  right: 0;

  @starting-style {
    right: -100vw;
  }
}

@media (width <= 630px) {
  #nav-container {
    gap: 35vw;
  }
  .lucide {
    display: block !important;
  }
  .navbar-nav {
    display: none;
  }
}

